<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_theme_key"
        android:title="@string/switch_theme_title" />

    <ListPreference
        android:dialogTitle="@string/font_size_title"
        android:entries="@array/font_sizes"
        android:entryValues="@array/font_size_values"
        android:defaultValue="1.25"
        android:key="switch_font_size_key"
        android:summary="@string/choose_font_size"
        android:title="@string/font_size_title" />

    <ListPreference
        android:defaultValue="en"
        android:dialogTitle="@string/select_language"
        android:entries="@array/language_options"
        android:entryValues="@array/language_options_values"
        android:key="switch_language_key"
        android:summary="@string/select_language"
        android:title="@string/language" />


    <Preference
        android:title="@string/clear_title"
        android:key="clear_all"
        android:summary="@string/clear_all_data_title" />

</PreferenceScreen>