<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".views.WorkoutSettingsActivity">

        <TextView
            android:id="@+id/workoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/workout_title_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/prepareTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prepare_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutPrepareEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/workTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/work_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutWorkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/restTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rest_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutRestEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/restBtwSetsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rest_between_sets_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutRestBtwSetsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/coolDownTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cool_down_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutCoolDownEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <TextView
            android:id="@+id/setsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sets_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/workoutSetsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <Button
            android:id="@+id/saveWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>
